--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -119,7 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Your Email"
-                    android:inputType="numberPassword"
+                    android:inputType="textEmailAddress"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:clickable="false"
@@ -143,7 +143,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Your Address"
-                    android:inputType="numberPassword"
+                    android:inputType="text"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:clickable="false"
@@ -168,7 +168,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Password 🔒"
-                    android:inputType="numberPassword"
+                    android:inputType="text"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:clickable="false"
