--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -17,10 +17,12 @@
 
 
         <ImageView
+            android:onClick="back_btn_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_arrow_back_24"
-            android:layout_margin="@dimen/_10sdp"/>
+            android:layout_margin="@dimen/_10sdp"
+            tools:ignore="OnClick" />
 
 
 
@@ -206,6 +208,7 @@
             android:textColor="#FFFFFF"
             android:textSize="@dimen/_20sdp"
             android:padding="@dimen/_1sdp"
+            android:layout_marginRight="@dimen/_10sdp"
             />
 
 
@@ -242,7 +245,7 @@
 
 
             <com.google.android.material.button.MaterialButton
-
+                android:id="@+id/pricetv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$8.24"
@@ -262,7 +265,8 @@
 
 
             <com.google.android.material.button.MaterialButton
-
+                android:id="@+id/order_btn"
+                android:onClick="Order_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Order Now"
@@ -275,7 +279,6 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-
                 android:gravity="center"
                 android:layout_gravity="center"
 
